// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Language switcher renders the structure with empty language list 1`] = `
<DocumentFragment>
  <div
    class="widget-language-selector popupmenu"
  >
    <div
      aria-activedescendant=""
      aria-controls="downshift-0-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-0-label"
      class="popupmenu-trigger popupmenu-trigger-alignment"
      id="downshift-0-toggle-button"
      role="combobox"
      tabindex="0"
    >
      <span
        class="current-language-text"
      />
      <span
        aria-hidden="true"
        class="language-arrow"
      >
        <div
          class="arrow-image arrow-down"
        />
      </span>
    </div>
    <div
      aria-labelledby="downshift-0-label"
      class="popupmenu-menu popupmenu-position-left"
      id="downshift-0-menu"
      role="listbox"
    />
  </div>
</DocumentFragment>
`;

exports[`Language switcher renders the structure with language list and selected default language 1`] = `
<DocumentFragment>
  <div
    class="widget-language-selector popupmenu"
  >
    <div
      aria-activedescendant=""
      aria-controls="downshift-1-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-1-label"
      class="popupmenu-trigger popupmenu-trigger-alignment"
      id="downshift-1-toggle-button"
      role="combobox"
      tabindex="0"
    >
      <span
        class="current-language-text"
      >
        En us
      </span>
      <span
        aria-hidden="true"
        class="language-arrow"
      >
        <div
          class="arrow-image arrow-down"
        />
      </span>
    </div>
    <div
      aria-labelledby="downshift-1-label"
      class="popupmenu-menu popupmenu-position-left"
      id="downshift-1-menu"
      role="listbox"
    >
      <div
        aria-selected="true"
        class="popupmenu-basic-item active "
        id="downshift-1-item-0"
        role="option"
      >
        En us
      </div>
    </div>
  </div>
</DocumentFragment>
`;
